tests/base/parser/bad/stmts_t-match-spid-with-bar-underscore-arrow-accept-eof.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

transition a ()
  match a with
  | _ => accept
